<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新…</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="about_access_offcial_website">访问官方网站</string>
    <string name="about_attention">关注小恩爱</string>
    <string name="about_check_failed">检测失败</string>
    <string name="about_follow_fail_tips">关注失败</string>
    <string name="about_follow_success_tips">已关注小恩爱新浪微博</string>
    <string name="about_permission">了解详情</string>
    <string name="about_recommended">推荐小恩爱给好友</string>
    <string name="about_recommended_others">把小恩爱推荐给朋友</string>
    <string name="about_reviews">喜欢我们，去评分</string>
    <string name="about_title">关于小恩爱</string>
    <string name="about_update_app1">正在检测新版本…</string>
    <string name="about_update_app2">检测到新版本，点击更新</string>
    <string name="about_update_app3">已经是最新版本</string>
    <string name="about_update_check">检查新版本</string>
    <string name="about_update_later">稍后再说</string>
    <string name="about_update_msg">升级说明</string>
    <string name="about_update_now">马上升级</string>
    <string name="about_user_protocol">用户协议</string>
    <string name="about_version">版本：</string>
    <string name="about_version_android">Android 版</string>
    <string name="about_website">官方网站</string>
    <string name="accept">接受</string>
    <string name="ad_click_open">打开</string>
    <string name="after_btn">后一天</string>
    <string name="after_history_date">选择日期</string>
    <string name="album">相册</string>
    <string name="album__no_permission">相机权限被禁用</string>
    <string name="album_anniversary_day">%d天</string>
    <string name="album_anniversary_year">%d周年</string>
    <string name="album_choose_enable">选择</string>
    <string name="album_choose_unable">取消选择</string>
    <string name="album_delete_count">删除(%d)</string>
    <string name="album_delete_photo_confirm">确定删除这张照片？</string>
    <string name="album_delete_photo_success">删除成功</string>
    <string name="album_delete_photo_waiting">删除中…</string>
    <string name="album_download_done">已保存到手机</string>
    <string name="album_download_failed">下载失败</string>
    <string name="album_download_origin_done">已完成</string>
    <string name="album_empty_tips">"相册还是空的
快来上传幸福的瞬间吧"</string>
    <string name="album_give_up_post">放弃上传照片？</string>
    <string name="album_image_too_many">已经超过5000张照片上限</string>
    <string name="album_images_uploading">图片正在上传!</string>
    <string name="album_lack_of_diamond_tip">金币不足，需足够的金币才能升级相册容量，是否兑换金币？</string>
    <string name="album_lack_of_diamond_title">金币不足</string>
    <string name="album_level_bought">%1$d张/已购买</string>
    <string name="album_level_diamonds">%1$d张/%2$d金币</string>
    <string name="album_max_select">最多只能选择20张照片</string>
    <string name="album_month">月</string>
    <string name="album_no_select_tips">请选择要删除的图片</string>
    <string name="album_origin">查看原图(%s)</string>
    <string name="album_origin2">查看原图</string>
    <string name="album_pick_from_photo">从相册选择</string>
    <string name="album_sdcard_no_enough">存储卡空间不足，功能暂不可用</string>
    <string name="album_sdcard_unmounted_tip">存储卡已拔出，小恩爱头像、合照功能将暂不可用</string>
    <string name="album_select_photo">选择图片</string>
    <string name="album_select_photos">选择照片</string>
    <string name="album_status">已存储%1$d张</string>
    <string name="album_status_count">已存储%1$d张</string>
    <string name="album_take_photo">拍照</string>
    <string name="album_title">私密相册</string>
    <string name="album_too_long">不能超过140个字</string>
    <string name="album_upgrade">升级存储容量</string>
    <string name="album_upgrade_already_max">你的相册已达最大容量</string>
    <string name="album_upgrade_confirm_tips">你将消耗%2$d金币升级相册容量到%1$d张，确定升级？</string>
    <string name="album_upgrade_success">"升级成功！
相册容量：%1$d张"</string>
    <string name="album_upgrading">升级中…</string>
    <string name="album_upload_error">%d张图片上传失败，请重试</string>
    <string name="album_upload_error2">上传失败</string>
    <string name="album_upload_fail">上传失败，请重试</string>
    <string name="album_upload_photo">上传相片</string>
    <string name="album_upload_photos">上传照片</string>
    <string name="album_upload_success">上传成功</string>
    <string name="album_upload_success2">成功添加到小恩爱私密相册</string>
    <string name="album_uploading">上传中：</string>
    <string name="alert_item_sound">声音</string>
    <string name="alert_item_vibrate">震动</string>
    <string name="alert_tip">当小恩爱在运行时，你可以设置是否需要声音或者震动。</string>
    <string name="alert_title">提醒设置</string>
    <string name="alisdk_message_10000_action">请检查对应名称模块的库文件是否包含在当前开发应用的依赖库里面</string>
    <string name="alisdk_message_10000_message">JS Bridge 载入器未找到名称为 {0} 的模块</string>
    <string name="alisdk_message_10000_name">JS_BRIDGE_MODULE_NOT_FOUND</string>
    <string name="alisdk_message_10000_type">E</string>
    <string name="alisdk_message_10002_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 AlibabaSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="alisdk_message_10002_message">SDK 初始化出错，错误信息为 {0}</string>
    <string name="alisdk_message_10002_name">INIT_EXCEPTION</string>
    <string name="alisdk_message_10002_type">E</string>
    <string name="alisdk_message_10003_action" />
    <string name="alisdk_message_10003_message">当前操作已经取消</string>
    <string name="alisdk_message_10003_name">USER_CANCEL</string>
    <string name="alisdk_message_10003_type">I</string>
    <string name="alisdk_message_10004_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10004_message">请求 INIT 服务器发生错误，错误消息为 {0}</string>
    <string name="alisdk_message_10004_name">REQUEST_INIT_SERVER_EXCEPTION</string>
    <string name="alisdk_message_10004_type">E</string>
    <string name="alisdk_message_10005_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10005_message">消息解密发生错误，错误消息为 {0}</string>
    <string name="alisdk_message_10005_name">RSA_DECRYPT_EXCEPTION</string>
    <string name="alisdk_message_10005_type">E</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_10010_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 AlibabaSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="alisdk_message_10010_message">发生错误，消息为 {0}, 请使用 LogCat 查看更多细节</string>
    <string name="alisdk_message_10010_name">GENERIC_SYSTEM_ERROR</string>
    <string name="alisdk_message_10010_type">E</string>
    <string name="alisdk_message_10011_action" />
    <string name="alisdk_message_10011_message">当前用户未登录</string>
    <string name="alisdk_message_10011_name">USER_ALREADY_LOGOUT</string>
    <string name="alisdk_message_10011_type">W</string>
    <string name="alisdk_message_10012_action">请在使用 SDK 业务功能之前确保已经调用 AlibabaSDK.asyncInit 方法并接收到初始化成功的回调</string>
    <string name="alisdk_message_10012_message">SDK 尚未被初始化</string>
    <string name="alisdk_message_10012_name">SDK_NOT_INIT</string>
    <string name="alisdk_message_10012_type">E</string>
    <string name="alisdk_message_10014_action">请检查网络设置后，并重试当前操作</string>
    <string name="alisdk_message_10014_message">当前网络不可用</string>
    <string name="alisdk_message_10014_name">NETWORK_NOT_AVAILABLE</string>
    <string name="alisdk_message_10014_type">E</string>
    <string name="app_name">小恩爱</string>
    <string name="cancel">取消</string>
    <string name="changepassword_item_new_pass">新密码</string>
    <string name="changepassword_item_new_pass_again">重复密码</string>
    <string name="changepassword_item_new_pass_again_hint">再次输入密码</string>
    <string name="changepassword_item_new_pass_hint">至少6位</string>
    <string name="changepassword_item_old_pass">旧密码</string>
    <string name="changepassword_item_old_pass_hint">请输入当前密码</string>
    <string name="changepassword_title">修改密码</string>
    <string name="chat_addstatus_hint">提示：不支持插入表情。</string>
    <string name="chat_addstatus_text_max">24</string>
    <string name="chat_addstatus_title">添加状态</string>
    <string name="clear">清空</string>
    <string name="done">完成</string>
    <string name="home_invite">邀请另一半</string>
    <string name="home_single">单身</string>
    <string name="image_picker_preview">预览</string>
    <string name="image_picker_title">所有照片</string>
    <string name="image_upload">上传</string>
    <string name="message">消息</string>
    <string name="next">下一步</string>
    <string name="none" />
    <string name="notify_name">通知</string>
    <string name="save">保存</string>
    <string name="setting_account_bind_phone">绑定手机号</string>
    <string name="setting_person_release_phone_bind">解除手机绑定</string>
    <string name="setting_person_title">个人信息</string>
    <string name="setting_phone_get_verify_code">获取验证码</string>
    <string name="setting_phone_input_hint">请输入手机号码</string>
    <string name="setting_phone_input_verify_hint">请输入验证码</string>
    <string name="setting_username_edit_hint">请输入你的新恩爱号</string>
    <string name="setting_username_tips">恩爱号只能修改一次。可以使用6~20个字母、数字、下划线和减号，必须以字母开头</string>
    <string name="setting_username_tips1">另一半可以通过恩爱号找到你</string>
    <string name="setting_username_title">修改恩爱号</string>
    <string name="street_cart_title">购物车</string>
    <string name="street_tae_cart_tips">快登录淘宝购物车</string>
    <string name="street_tae_login_btn">淘宝授权登录</string>
    <string name="street_tae_tips">乐享小恩爱专属优惠吧</string>
    <string name="submit">提交</string>
</resources>