<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/rootLayout" android:background="@drawable/settings_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xiaoenai="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" xiaoenai:titleBarTitle="@string/setting_username_title" xiaoenai:leftDrawable="@drawable/title_bar_icon_back" xiaoenai:leftText="@string/setting_person_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/noteLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="@dimen/setting_layout_marginTop" android:layout_marginRight="15.0dip">
        <TextView android:textSize="@dimen/setting_tips_text_size" android:textColor="@color/color_text_dark_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/setting_username_tips1" />
        <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColorHint="@color/color_text_grey" android:gravity="center_vertical" android:id="@id/etv_username" android:background="@drawable/bg_input_white" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:hint="@string/setting_username_edit_hint" android:maxLines="1" android:singleLine="true" android:drawableRight="@drawable/home_ad_delete_btn" android:imeOptions="actionDone" android:imeActionLabel="@string/done" />
        <TextView android:textSize="@dimen/setting_tips_text_size" android:textColor="@color/color_text_dark_grey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/setting_username_tips" />
        <Button android:textSize="@dimen/setting_btn_text_size" android:textColor="@color/white" android:id="@id/btn_save" android:background="@drawable/bg_btn_pink" android:layout_width="fill_parent" android:layout_height="@dimen/setting_btn_height" android:layout_marginTop="20.0dip" android:text="@string/save" />
    </LinearLayout>
</LinearLayout>