<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/settings_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xiaoenai="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" xiaoenai:titleBarTitle="@string/about_update_check" xiaoenai:leftDrawable="@drawable/title_bar_icon_back" xiaoenai:leftText="@string/about_title" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:weightSum="100.0" android:layout_below="@id/titleBar" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="50.0">
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" android:contentDescription="@string/none" />
            <TextView android:textSize="18.0sp" android:textColor="#ff444444" android:layout_gravity="center_horizontal" android:padding="9.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="30.0">
            <TextView android:textSize="15.0sp" android:textColor="#ff101010" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version_android" />
            <TextView android:textSize="15.0sp" android:textColor="#ff101010" android:layout_gravity="center_horizontal" android:id="@id/textView_version" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="#ff101010" android:layout_gravity="center_horizontal" android:id="@id/textView_version_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/about_update_app1" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/relativeLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="20.0">
            <Button android:textColor="#fff45595" android:layout_gravity="center_horizontal" android:id="@id/imageButton_go_web" android:background="@drawable/widget_setting_bind" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_access_offcial_website" android:contentDescription="@string/none" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>