<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/mainLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xiaoenai="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/home_single_topbar" android:layout_width="fill_parent" android:layout_height="wrap_content" xiaoenai:titleBarTitle="@string/app_name" xiaoenai:leftText="@string/home_single" xiaoenai:rightText="@string/home_invite" />
    <com.xiaoenai.app.classes.home.view.LoverSearchView android:id="@id/loverSearchView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <com.ecloud.pulltozoomview.PullToZoomScrollViewEx android:id="@id/bounceListView" android:scrollbars="none" android:layout_width="fill_parent" style="@style/ListViewCommonStyle" />
</LinearLayout>