<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/settings_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xiaoenai="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" xiaoenai:titleBarTitle="@string/changepassword_title" xiaoenai:leftDrawable="@drawable/title_bar_icon_back" xiaoenai:leftText="@string/setting_person_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/inputLayout" android:background="@drawable/bg_input_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:layout_below="@id/titleBar">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="#ff5e5e5e" android:layout_gravity="center_vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="30.0dip" android:text="@string/changepassword_item_old_pass" />
            <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColor="#ff000000" android:textColorHint="#ffc7c7cd" android:layout_gravity="center_vertical" android:id="@id/editTextPassword" android:background="#00000000" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/changepassword_item_old_pass_hint" android:maxLines="1" android:singleLine="true" android:drawableRight="@drawable/home_ad_delete_btn" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionNext" />
        </LinearLayout>
        <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="#ff5e5e5e" android:layout_gravity="center_vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="30.0dip" android:text="@string/changepassword_item_new_pass" />
            <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColor="#ff000000" android:textColorHint="#ffc7c7cd" android:layout_gravity="center_vertical" android:id="@id/editTextNewPassword" android:background="#00000000" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/changepassword_item_new_pass_hint" android:maxLines="1" android:singleLine="true" android:drawableRight="@drawable/home_ad_delete_btn" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionNext" />
        </LinearLayout>
        <View android:background="@color/divider_color" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="#ff5e5e5e" android:layout_gravity="center_vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="15.0dip" android:text="@string/changepassword_item_new_pass_again" />
            <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColor="#ff000000" android:textColorHint="#ffc7c7cd" android:layout_gravity="center_vertical" android:id="@id/editTextNewPasswordAgain" android:background="#00000000" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:hint="@string/changepassword_item_new_pass_again_hint" android:drawableRight="@drawable/home_ad_delete_btn" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionNext" />
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="@dimen/login_btn_text_size" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btn_save" android:background="@drawable/bg_btn_pink" android:layout_width="fill_parent" android:layout_height="@dimen/login_btn_height" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/save" android:layout_below="@id/inputLayout" android:layout_centerHorizontal="true" />
</RelativeLayout>