<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rootLayout" android:background="#ffeaeaea" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xiaoenai="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" xiaoenai:titleBarTitle="@string/image_picker_title" xiaoenai:leftDrawable="@drawable/title_bar_icon_back" xiaoenai:leftText="@string/album" xiaoenai:rightText="@string/cancel" />
    <RelativeLayout android:id="@id/manageLayout" android:background="@drawable/preview_buttom_bg" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/album_preview_btn_unable" android:gravity="center" android:id="@id/previewBtn" android:background="@drawable/album_preview_btn_unable" android:layout_width="50.0dip" android:layout_height="30.0dip" android:text="@string/image_picker_preview" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/album_send_btn_unable" android:gravity="center" android:id="@id/sendBtn" android:background="@drawable/album_send_btn_unable" android:layout_width="80.0dip" android:layout_height="30.0dip" android:text="@string/image_upload" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <GridView android:id="@id/image_picker_grid_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@null" android:horizontalSpacing="4.0dip" android:verticalSpacing="2.0dip" android:numColumns="3" android:layout_above="@id/manageLayout" android:layout_below="@id/titleBar" />
    <ListView android:id="@id/image_dir_list" android:background="#ffe7e8ec" android:visibility="gone" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@null" android:stackFromBottom="false" android:transcriptMode="normal" android:divider="@null" android:layout_above="@id/manageLayout" android:layout_below="@id/titleBar" style="@style/ListViewCommonStyle" />
</RelativeLayout>