<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/settings_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:topbar="http://schemas.android.com/apk/res-auto">
    <com.xiaoenai.app.widget.TitleBarView android:id="@id/titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" topbar:titleBarTitle="@string/setting_account_bind_phone" topbar:leftDrawable="@drawable/title_bar_icon_back" topbar:leftText="@string/setting_person_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_input_layout" android:background="@drawable/bg_input_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:layout_below="@id/titleBar">
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_phone_layout" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="15.0sp" android:textColor="#ff5e5e5e" android:layout_gravity="center_vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="+86" />
            <ImageView android:background="@color/divider_bg" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="6.0dip" android:contentDescription="@null" />
            <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColor="@color/black" android:textColorHint="@color/color_text_grey" android:gravity="center_vertical" android:id="@id/etv_phone" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/setting_phone_input_hint" android:maxLines="1" android:singleLine="true" android:maxLength="14" android:drawableRight="@drawable/home_ad_delete_btn" android:layout_weight="8.0" android:layout_centerVertical="true" android:inputType="phone" android:imeOptions="actionNext" android:imeActionLabel="@string/next" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_code_layout" android:background="@drawable/bg_verify_code_et" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.xiaoenai.app.widget.CleanableEditText android:textSize="@dimen/input_text_size" android:textColorHint="@color/color_text_grey" android:gravity="center_vertical" android:id="@id/etv_code" android:background="@color/transparent" android:paddingLeft="9.0dip" android:layout_width="0.0dip" android:layout_height="44.0dip" android:hint="@string/setting_phone_input_verify_hint" android:maxLines="1" android:singleLine="true" android:drawableRight="@drawable/home_ad_delete_btn" android:layout_weight="1.0" android:inputType="number" />
            <Button android:textSize="13.0sp" android:textColor="@color/color_text_grey" android:id="@id/btn_reget_code" android:background="@drawable/bg_btn_white_line" android:layout_width="88.0dip" android:layout_height="31.0dip" android:layout_marginRight="6.0dip" android:text="@string/setting_phone_get_verify_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_unbind" android:background="@drawable/bg_btn_red" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="@string/setting_person_release_phone_bind" />
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/btn_submit" android:background="@drawable/bg_btn_pink" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/setting_btn_height" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="@string/submit" />
</LinearLayout>